==> vedderb/vesc_bms_fw/ChibiOS_20.3.4/community/os/hal/ports/RP/LLD/USBDv1/hal_usb_lld.c <==
#include <string.h>
#include "hal.h"
#include "hal_usb_lld.h"
#include "mcuconf.h"
#include "chmtx.h"
#include "rp_fifo.h"
#define CMD_RESET 0x0F
#define CMD_SETUP 0x01
#define CMD_READ_SETUP 0x02
#define CMD_SET_ADDR 0x03
#define CMD_START_IN 0x04
#define CMD_START_OUT 0x05
#define CMD_BUFF_STATUS 0x06
#define CMD_EP_DONE 0x07
#define CMD_DATA_ERROR 0x09
#define CMD_PREP_IN_EP  0x0A
#define CMD_PREP_OUT_EP 0x0B
#define CMD_SET_ADDR_HW 0x0C
#define CMD_EP_NEXT 0x0D

void usb_lld_init(void) {
#if RP_USB_USE_USBD0 == TRUE
  /* Driver initialization.*/
  usbObjectInit(&USBD1);

  /* Reset buffer offset. */
  USBD1.noffset = 0;
#endif
}

void usb_lld_start(USBDriver *usbp) {
#if RP_USB_USE_USBD0 == TRUE
#ifdef USB_DEBUG
  chMtxObjectInit(&cmtx);
#endif
  if (&USBD1 == usbp) {
    if (usbp->state == USB_STOP) {
      /* Reset usb controller */
      hal_lld_peripheral_reset(RESETS_ALLREG_USBCTRL);
      hal_lld_peripheral_unreset(RESETS_ALLREG_USBCTRL);

      /* Clear any previous state in dpram */
      memset(USB_DPSRAM, 0, sizeof(*USB_DPSRAM));

      /* Mux the controller to the onboard usb phy */
      USB->MUXING = USB_USB_MUXING_SOFTCON | USB_USB_MUXING_TO_PHY;

#if RP_USB_FORCE_VBUS_DETECT == TRUE
      /* Force VBUS detect so the device thinks it is plugged into a host */
      USB->PWR = USB_USB_PWR_VBUS_DETECT_OVERRIDE_EN | USB_USB_PWR_VBUS_DETECT;
#else
#if RP_USE_EXTERNAL_VBUS_DETECT == TRUE
      /* If VBUS is detected by pin without USB VBUS DET pin,
       * define usb_vbus_detect which returns true if VBUS is enabled.
       */
      if (usb_vbus_detect()) {
        USB->PWR = USB_USB_PWR_VBUS_DETECT_OVERRIDE_EN | USB_USB_PWR_VBUS_DETECT;
      }
#endif /* RP_USE_EXTERNAL_VBUS_DETECT */
#endif /* RP_USB_FORCE_VBUS_DETECT */

      /* Reset procedure enforced on driver start.*/
      usb_lld_reset(usbp);

      /* Enable the USB controller in device mode. */
      USB->MAINCTRL = USB_MAIN_CTRL_CONTROLLER_EN;

      /* Enable an interrupt per EP0 transaction */
      USB->SIECTRL = USB_SIE_CTRL_EP0_INT_1BUF;

      /* Enable interrupts */
      USB->INTE = USB_INTE_SETUP_REQ |
                  USB_INTE_DEV_RESUME_FROM_HOST |
                  USB_INTE_DEV_SUSPEND |
                  USB_INTE_BUS_RESET |
                  USB_INTE_BUFF_STATUS;
#if RP_USB_USE_ERROR_DATA_SEQ_INTR == TRUE
      USB->INTE |= USB_INTE_ERROR_DATA_SEQ;
#endif /* RP_USB_USE_ERROR_DATA_SEQ_INTR */
#if RP_USB_USE_SOF_INTR == TRUE
      USB->INTE |= USB_INTE_DEV_SOF;
#endif /* RP_USB_USE_SOF_INTR */

      /* Enable USB interrupt. */
      nvicEnableVector(RP_USBCTRL_IRQ_NUMBER, RP_IRQ_USB0_PRIORITY);

      /* Present full speed device by enabling pull up on DP */
      USB->SET.SIECTRL = USB_SIE_CTRL_PULLUP_EN;
    }
  }
#endif
}

void usb_lld_stop(USBDriver *usbp) {
#if RP_USB_USE_USBD0 == TRUE
  if (&USBD1 == usbp) {
    if (usbp->state == USB_READY) {
      /* Disable interrupt */
      USB->INTE = 0;

      /* Disable controller */
      USB->CLR.MAINCTRL = USB_MAIN_CTRL_CONTROLLER_EN;
    }
  }
#endif
}

void usb_lld_set_address(USBDriver *usbp) {
  /* Set address to hardware here. */
  USB->DEVADDRCTRL = USB_ADDR_ENDP0_ADDRESS_Msk & (usbp->address << USB_ADDR_ENDP0_ADDRESS_Pos);

#ifdef USB_DEBUG
  cmd_send(CMD_SET_ADDR, 1);
  data_send(usbp->address);
#endif

  reset_ep0(usbp);
}

void usb_lld_init_endpoint(USBDriver *usbp, usbep_t ep) {
  (void)usbp;

  uint16_t buf_size;
  uint16_t buf_offset;
  uint32_t buf_ctrl;
  const USBEndpointConfig *epcp = usbp->epc[ep];

  if (ep == 0) {
    epcp->in_state->hw_buf = (uint8_t*)&USB_DPSRAM->EP0BUF0;
    epcp->in_state->buf_size = 64;
    USB->SET.SIECTRL = USB_EP_BUFFER_IRQ_EN;
    BUF_CTRL(0).OUT = USB_BUFFER_BUFFER0_AVAILABLE;
    epcp->in_state->next_pid = 1U;
    epcp->in_state->active = false;
    epcp->in_state->stalled = false;
    return;
  }

  if (epcp->in_state) {
    buf_ctrl = 0;
    epcp->in_state->active = false;
    epcp->in_state->stalled = false;
    epcp->in_state->next_pid = 0U;

    if (epcp->ep_mode == USB_EP_MODE_TYPE_ISOC) {
      buf_size = usb_isochronous_buffer_size(epcp->in_maxsize);
      buf_ctrl |= usb_isochronous_buffer_mode(buf_size) << USB_BUFFER_DOUBLE_BUFFER_OFFSET_Pos;
    } else {
      buf_size = 64;
    }
    buf_offset = usb_buffer_next_offset(usbp, buf_size, true);
    epcp->in_state->hw_buf = (uint8_t*)&USB_DPSRAM->DATA[buf_offset];
    epcp->in_state->buf_size = buf_size;

    EP_CTRL(ep).IN = USB_EP_EN |
                      (epcp->ep_mode << USB_EP_TYPE_Pos) |
                      ((uint8_t*)epcp->in_state->hw_buf - (uint8_t*)USB_DPSRAM);
    BUF_CTRL(ep).IN = buf_ctrl;
  }

  if (epcp->out_state) {
    buf_ctrl = USB_BUFFER_BUFFER0_AVAILABLE | epcp->out_maxsize;
    epcp->out_state->active = false;
    epcp->out_state->stalled = false;
    epcp->out_state->next_pid = 1U;

    if (epcp->ep_mode == USB_EP_MODE_TYPE_ISOC) {
      buf_size = usb_isochronous_buffer_size(epcp->in_maxsize);
      buf_ctrl |= usb_isochronous_buffer_mode(buf_size) << USB_BUFFER_DOUBLE_BUFFER_OFFSET_Pos;
    } else {
      buf_size = 64;
    }
    buf_offset = usb_buffer_next_offset(usbp, buf_offset, false);
    epcp->out_state->hw_buf = (uint8_t*)&USB_DPSRAM->DATA[buf_offset];
    epcp->out_state->buf_size = buf_size;

    EP_CTRL(ep).OUT = USB_EP_EN | USB_EP_BUFFER_IRQ_EN |
                       (epcp->ep_mode << USB_EP_TYPE_Pos) |
                       ((uint8_t*)epcp->out_state->hw_buf - (uint8_t*)USB_DPSRAM);
    BUF_CTRL(ep).OUT = buf_ctrl;
  }
}

void usb_lld_disable_endpoints(USBDriver *usbp) {
  uint8_t ep;

  /* Ignore zero */
  for (ep = 1; ep <= USB_ENDOPOINTS_NUMBER; ep++) {
    usbp->epc[ep]->in_state->active = false;
    usbp->epc[ep]->in_state->stalled = false;
    usbp->epc[ep]->in_state->next_pid = 0;
    EP_CTRL(ep).IN &= ~USB_EP_EN;

    usbp->epc[ep]->out_state->active = false;
    usbp->epc[ep]->out_state->stalled = false;
    usbp->epc[ep]->out_state->next_pid = 0;
    EP_CTRL(ep).OUT &= ~USB_EP_EN;
  }
}

void usb_lld_start_out(USBDriver *usbp, usbep_t ep) {
  (void)usbp;
  USBOutEndpointState *oesp = usbp->epc[ep]->out_state;

  /* Transfer initialization.*/
  if (oesp->rxsize == 0) {
    /* Special case for zero sized packets.*/
    oesp->rxpkts = 1;
  } else {
    oesp->rxpkts = (uint16_t)((oesp->rxsize + usbp->epc[ep]->out_maxsize - 1) /
                             usbp->epc[ep]->out_maxsize);
  }

#ifdef USB_DEBUG
  cmd_send(CMD_START_OUT, 1);
  data_send((ep << 24) | oesp->rxsize | (oesp->rxpkts << 16));
#endif
}

void usb_lld_start_in(USBDriver *usbp, usbep_t ep) {
  USBInEndpointState *iesp = usbp->epc[ep]->in_state;
#ifdef USB_DEBUG
  cmd_send(CMD_START_IN, 1);
  data_send((ep << 24) | iesp->txsize);
#endif
  iesp->txlast = 0;

  /* Prepare IN endpoint. */
  usb_prepare_in_ep(usbp, ep);
}

void usb_lld_stall_out(USBDriver *usbp, usbep_t ep) {
  (void)usbp;

  if (ep == 0) {
    USB->SET.EPSTALLARM = USB_EP_STALL_ARM_EP0_OUT;
  }
  BUF_CTRL(ep).OUT |= USB_BUFFER_STALL;
  usbp->epc[ep]->out_state->stalled = true;
}

void usb_lld_stall_in(USBDriver *usbp, usbep_t ep) {
  (void)usbp;

  if (ep == 0) {
    USB->SET.EPSTALLARM = USB_EP_STALL_ARM_EP0_IN;
  }
  BUF_CTRL(ep).IN |= USB_BUFFER_STALL;
  usbp->epc[ep]->in_state->stalled = true;
}

void usb_lld_clear_out(USBDriver *usbp, usbep_t ep) {
  (void)usbp;

  if (ep == 0) {
    USB->CLR.EPSTALLARM = USB_EP_STALL_ARM_EP0_OUT;
  }
  BUF_CTRL(ep).OUT &= ~USB_BUFFER_STALL;
  usbp->epc[ep]->out_state->stalled = false;
}

void usb_lld_clear_in(USBDriver *usbp, usbep_t ep) {
  (void)usbp;

  if (ep == 0) {
    USB->CLR.EPSTALLARM = USB_EP_STALL_ARM_EP0_IN;
  }
  BUF_CTRL(ep).IN &= ~USB_BUFFER_STALL;
  usbp->epc[ep]->in_state->stalled = false;
}
